// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletMenu Component > Connected State - Multiple Wallets > matches snapshot - multiple wallets connected 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="h-10 px-2 md:px-4 bg-gray-800/50 hover:bg-gray-800 border border-purple-500/20 hover:border-purple-500/40 rounded-lg transition-all duration-200 flex items-center gap-2 text-sm font-medium text-gray-200 hover:text-white "
      data-testid="unified-wallet-menu-button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wallet w-4 h-4 text-purple-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
        />
        <path
          d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
        />
      </svg>
      <span
        class="font-mono hidden sm:inline"
      >
        0x1234...5678
      </span>
      <span
        class="ml-1 px-1.5 py-0.5 bg-purple-500/20 text-purple-300 rounded text-xs font-bold hidden sm:inline"
      >
        2
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down w-4 h-4 transition-transform duration-200 rotate-180"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      aria-label="Wallet menu"
      class="absolute top-full right-0 mt-2 w-80 bg-gray-900 border border-purple-500/30 rounded-xl shadow-2xl shadow-purple-500/10 backdrop-blur-xl z-50 overflow-hidden"
      data-testid="unified-wallet-menu-dropdown"
      role="menu"
      style="opacity: 0; transform: translateY(-10px) scale(0.95);"
    >
      <div
        class="py-2"
      >
        <div
          class="px-4 py-2 border-b border-gray-800"
        >
          <div
            class="text-xs text-gray-400 uppercase tracking-wide mb-3"
          >
            Connected Wallets
          </div>
          <div
            class="space-y-2 max-h-64 overflow-y-auto"
          >
            <div
              class="p-3 rounded-lg border transition-all bg-purple-500/10 border-purple-500/30"
            >
              <div
                class="flex items-center justify-between mb-1"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <div
                    class="w-2 h-2 rounded-full bg-purple-400 animate-pulse"
                  />
                  <span
                    class="font-mono text-sm text-white"
                  >
                    0x1234...5678
                  </span>
                </div>
                <button
                  class="text-xs text-gray-400 hover:text-purple-300 transition-colors"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-copy w-3 h-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="14"
                      rx="2"
                      ry="2"
                      width="14"
                      x="8"
                      y="8"
                    />
                    <path
                      d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="text-xs text-purple-400 font-bold flex items-center gap-1"
              >
                Active Wallet
              </div>
            </div>
            <div
              class="p-3 rounded-lg border transition-all bg-gray-800/30 border-gray-700/50 hover:border-gray-600"
            >
              <div
                class="flex items-center justify-between mb-1"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <div
                    class="w-2 h-2 rounded-full bg-gray-600"
                  />
                  <span
                    class="font-mono text-sm text-white"
                  >
                    0xabcd...ef12
                  </span>
                </div>
                <button
                  class="text-xs text-gray-400 hover:text-purple-300 transition-colors"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-copy w-3 h-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="14"
                      rx="2"
                      ry="2"
                      width="14"
                      x="8"
                      y="8"
                    />
                    <path
                      d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="px-4 py-3 border-b border-gray-800"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            <button
              class="flex-1 text-sm"
              data-testid="connect-wallet-btn"
            >
              Connect Wallet Button
            </button>
          </div>
        </div>
        <div
          class="py-1"
        >
          <button
            class="w-full px-4 py-2.5 text-left text-sm text-gray-200 hover:bg-purple-500/10 hover:text-white transition-colors flex items-center gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-wallet w-4 h-4 text-purple-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
              />
              <path
                d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
              />
            </svg>
            View Bundles
          </button>
          <button
            class="w-full px-4 py-2.5 text-left text-sm text-gray-200 hover:bg-purple-500/10 hover:text-white transition-colors flex items-center gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-settings w-4 h-4 text-purple-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
            Settings
          </button>
        </div>
        <div
          class="border-t border-gray-800 py-1"
        >
          <button
            class="w-full px-4 py-2.5 text-left text-sm text-red-400 hover:bg-red-500/10 hover:text-red-300 transition-colors flex items-center gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-out w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 17 5-5-5-5"
              />
              <path
                d="M21 12H9"
              />
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
            </svg>
            Disconnect All
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletMenu Component > Connected State - Single Wallet > matches snapshot - single wallet connected 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="h-10 px-2 md:px-4 bg-gray-800/50 hover:bg-gray-800 border border-purple-500/20 hover:border-purple-500/40 rounded-lg transition-all duration-200 flex items-center gap-2 text-sm font-medium text-gray-200 hover:text-white "
      data-testid="unified-wallet-menu-button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wallet w-4 h-4 text-purple-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
        />
        <path
          d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
        />
      </svg>
      <span
        class="font-mono hidden sm:inline"
      >
        0x1234...5678
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down w-4 h-4 transition-transform duration-200 rotate-180"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      aria-label="Wallet menu"
      class="absolute top-full right-0 mt-2 w-80 bg-gray-900 border border-purple-500/30 rounded-xl shadow-2xl shadow-purple-500/10 backdrop-blur-xl z-50 overflow-hidden"
      data-testid="unified-wallet-menu-dropdown"
      role="menu"
      style="opacity: 0; transform: translateY(-10px) scale(0.95);"
    >
      <div
        class="py-2"
      >
        <div
          class="px-4 py-3 border-b border-gray-800"
        >
          <div
            class="flex items-center justify-between mb-2"
          >
            <span
              class="text-xs text-gray-400 uppercase tracking-wide"
            >
              Connected Wallet
            </span>
            <button
              class="text-xs text-purple-400 hover:text-purple-300 flex items-center gap-1 transition-colors"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-copy w-3 h-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
              Copy
            </button>
          </div>
          <div
            class="font-mono text-sm text-white"
          >
            0x1234...5678
          </div>
        </div>
        <div
          class="py-1"
        >
          <button
            class="w-full px-4 py-2.5 text-left text-sm text-gray-200 hover:bg-purple-500/10 hover:text-white transition-colors flex items-center gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-wallet w-4 h-4 text-purple-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
              />
              <path
                d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
              />
            </svg>
            View Bundles
          </button>
          <button
            class="w-full px-4 py-2.5 text-left text-sm text-gray-200 hover:bg-purple-500/10 hover:text-white transition-colors flex items-center gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-settings w-4 h-4 text-purple-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
            Settings
          </button>
        </div>
        <div
          class="border-t border-gray-800 py-1"
        >
          <button
            class="w-full px-4 py-2.5 text-left text-sm text-red-400 hover:bg-red-500/10 hover:text-red-300 transition-colors flex items-center gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-log-out w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 17 5-5-5-5"
              />
              <path
                d="M21 12H9"
              />
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
            </svg>
            Disconnect
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletMenu Component > Disconnected State > matches snapshot - disconnected state 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="h-10 px-2 md:px-4 bg-gray-800/50 hover:bg-gray-800 border border-purple-500/20 hover:border-purple-500/40 rounded-lg transition-all duration-200 flex items-center gap-2 text-sm font-medium text-gray-200 hover:text-white "
      data-testid="unified-wallet-menu-button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-wallet w-4 h-4 text-purple-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
        />
        <path
          d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
        />
      </svg>
      <span
        class="hidden sm:inline"
      >
        Connect Wallet
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down w-4 h-4 transition-transform duration-200"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;
